kubernetes/apps/freshrss/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: freshrss
  namespace: freshrss
spec:
  podSelector:
    matchLabels:
      app: freshrss
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 80
  egress:
    - ports:
        - port: 443
        - port: 80
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
